--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,11 +1,11 @@
 ---
-ParkbyDuncan-Large.jpg: ParkbyDuncan-Large.jpg
-ParkbyDuncan-Small.jpg: ParkbyDuncan-Small.jpg
-ParkbyDuncan.jpg: ParkbyDuncan.jpg
-SnowyBackground.jpg: SnowyBackground.jpg
-boonfriend.png: boonfriend.png
-rails.png: rails.png
-application.js: application.js
-application.css: application.css
-glyphicons-halflings-white.png: glyphicons-halflings-white.png
-glyphicons-halflings.png: glyphicons-halflings.png
+ParkbyDuncan-Large.jpg: ParkbyDuncan-Large-b79cc38fbad1d1b233cd11d0190fc08a.jpg
+ParkbyDuncan-Small.jpg: ParkbyDuncan-Small-1f724a082cd969cf6e249a6cb874f16c.jpg
+ParkbyDuncan.jpg: ParkbyDuncan-79ccca9abec8a90fcbfea27b99b409af.jpg
+SnowyBackground.jpg: SnowyBackground-717ac49732b310734d9dde013a21dfee.jpg
+boonfriend.png: boonfriend-a330af8181ba8274e90e7d44ae025438.png
+rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
+application.js: application-23956122bbba05784c2fe9263b357f02.js
+application.css: application-3f0f8ca7f5bb919e1632e2734b6a30ea.css
+glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
+glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
