--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,11 +1,23 @@
 ---
-ParkbyDuncan-Large.jpg: ParkbyDuncan-Large-b79cc38fbad1d1b233cd11d0190fc08a.jpg
-ParkbyDuncan-Small.jpg: ParkbyDuncan-Small-1f724a082cd969cf6e249a6cb874f16c.jpg
-ParkbyDuncan.jpg: ParkbyDuncan-79ccca9abec8a90fcbfea27b99b409af.jpg
-SnowyBackground.jpg: SnowyBackground-717ac49732b310734d9dde013a21dfee.jpg
-boonfriend.png: boonfriend-a330af8181ba8274e90e7d44ae025438.png
-rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-23956122bbba05784c2fe9263b357f02.js
-application.css: application-3f0f8ca7f5bb919e1632e2734b6a30ea.css
-glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
-glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
+ParkbyDuncan-Large.jpg: ParkbyDuncan-Large-849b5e0a5ecd35a738d4c37c582671bd.jpg
+ParkbyDuncan-Large/index.jpg: ParkbyDuncan-Large-849b5e0a5ecd35a738d4c37c582671bd.jpg
+ParkbyDuncan-Small.jpg: ParkbyDuncan-Small-79a12f70d6a271e4ceb710392b6bff0d.jpg
+ParkbyDuncan-Small/index.jpg: ParkbyDuncan-Small-79a12f70d6a271e4ceb710392b6bff0d.jpg
+ParkbyDuncan.jpg: ParkbyDuncan-b5d5150ef1ccac537a330bdcaac8bf3d.jpg
+ParkbyDuncan/index.jpg: ParkbyDuncan-b5d5150ef1ccac537a330bdcaac8bf3d.jpg
+SnowyBackground.jpg: SnowyBackground-060825fc6fde224f24fb488bb1f21d80.jpg
+SnowyBackground/index.jpg: SnowyBackground-060825fc6fde224f24fb488bb1f21d80.jpg
+boonfriend.png: boonfriend-ba77d29991481c0c93863292ba61dcd6.png
+boonfriend/index.png: boonfriend-ba77d29991481c0c93863292ba61dcd6.png
+rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
+rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
+application.js: application-82e6e098c62182c9da731903800b6f90.js
+application/index.js: application-82e6e098c62182c9da731903800b6f90.js
+application.css: application-b835be166772bf4e29cf0676bf8b7570.css
+application/index.css: application-b835be166772bf4e29cf0676bf8b7570.css
+glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
+jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
